--- a/android/api/io/scanbot/sdk/ui/view/barcode/BarcodeNavigationEvents.BarcodeScanned.html
+++ b/android/api/io/scanbot/sdk/ui/view/barcode/BarcodeNavigationEvents.BarcodeScanned.html
@@ -178,6 +178,12 @@ extends <a href=BarcodeNavigationEvents.html>BarcodeNavigationEvents</a>
                                             <td class="colLast"></td>
                                         </tr>
                                         
+                                        <tr class="rowColor">
+                                            <td class="colFirst"><code>private final <a href=https://developer.android.com/reference/kotlin/java/lang/Long.html>Long</a></code></td>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeNavigationEvents.BarcodeScanned.html#delayAfterScanMs>delayAfterScanMs</a></code></th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
                                     </table>
                                 </div>
                             </li>
@@ -204,7 +210,7 @@ extends <a href=BarcodeNavigationEvents.html>BarcodeNavigationEvents</a>
                                         
                                             <tr class="altColor">
                                                 <th class="colConstructorName" scope="row"><code><span class="memberNameLink"><a
-                                                        href="#BarcodeNavigationEvents.BarcodeScanned(BarcodeScanningResult,String,String)">BarcodeNavigationEvents.BarcodeScanned</a></span>(<a href=../../../barcode/entity/BarcodeScanningResult.html>BarcodeScanningResult</a> result, <a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> barcodeImagePath, <a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> barcodePreviewFramePath)</code></th>
+                                                        href="#BarcodeNavigationEvents.BarcodeScanned(BarcodeScanningResult,String,String,Long)">BarcodeNavigationEvents.BarcodeScanned</a></span>(<a href=../../../barcode/entity/BarcodeScanningResult.html>BarcodeScanningResult</a> result, <a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> barcodeImagePath, <a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> barcodePreviewFramePath, <a href=https://developer.android.com/reference/kotlin/java/lang/Long.html>Long</a> delayAfterScanMs)</code></th>
                                                 <td class="colLast"></td>
                                             </tr>
                                         
@@ -281,6 +287,14 @@ extends <a href=BarcodeNavigationEvents.html>BarcodeNavigationEvents</a>
                                             <td class="colLast"></td>
                                         </tr>
                                         
+                                        <tr id="i3" class="rowColor">
+                                            <td class="colFirst"><code>final <a href=https://developer.android.com/reference/kotlin/java/lang/Long.html>Long</a></code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeNavigationEvents.BarcodeScanned.html#getDelayAfterScanMs()>getDelayAfterScanMs</a>() </code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
                                         </tbody>
                                     </table>
                                 </div>
@@ -312,11 +326,11 @@ extends <a href=BarcodeNavigationEvents.html>BarcodeNavigationEvents</a>
                             </a>
                                 <h3>Constructor Detail</h3>
                                 
-                                <a name="BarcodeNavigationEvents.BarcodeScanned(BarcodeScanningResult,String,String)"></a>
+                                <a name="BarcodeNavigationEvents.BarcodeScanned(BarcodeScanningResult,String,String,Long)"></a>
                                 <ul class="blockList">
                                     <li class="blockList">
                                         <h4>BarcodeNavigationEvents.BarcodeScanned</h4>
-                                        <pre>BarcodeNavigationEvents.BarcodeScanned(<a href=../../../barcode/entity/BarcodeScanningResult.html>BarcodeScanningResult</a> result, <a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> barcodeImagePath, <a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> barcodePreviewFramePath)</pre>
+                                        <pre>BarcodeNavigationEvents.BarcodeScanned(<a href=../../../barcode/entity/BarcodeScanningResult.html>BarcodeScanningResult</a> result, <a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> barcodeImagePath, <a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> barcodePreviewFramePath, <a href=https://developer.android.com/reference/kotlin/java/lang/Long.html>Long</a> delayAfterScanMs)</pre>
                                         <div class="block"></div>
                                         
                                     </li>
@@ -369,11 +383,26 @@ extends <a href=BarcodeNavigationEvents.html>BarcodeNavigationEvents</a>
                                     <!--   -->
                                 </a>
                                 <ul class=
-                                              "blockListLast"
+                                              "blockList"
                                           >
                                     <li class="blockList">
                                         <h4>getBarcodePreviewFramePath</h4>
                                         <pre class="methodSignature"> final <a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> <a href=BarcodeNavigationEvents.BarcodeScanned.html#getBarcodePreviewFramePath()>getBarcodePreviewFramePath</a>()</pre>
+                                        <div class="block"></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="getDelayAfterScanMs()">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockListLast"
+                                          >
+                                    <li class="blockList">
+                                        <h4>getDelayAfterScanMs</h4>
+                                        <pre class="methodSignature"> final <a href=https://developer.android.com/reference/kotlin/java/lang/Long.html>Long</a> <a href=BarcodeNavigationEvents.BarcodeScanned.html#getDelayAfterScanMs()>getDelayAfterScanMs</a>()</pre>
                                         <div class="block"></div>
                                         
                                         <!-- TODO missing return annotation -->
