--- a/android/api/io/scanbot/sdk/ui/view/barcode/batch/configuration/package-summary.html
+++ b/android/api/io/scanbot/sdk/ui/view/barcode/batch/configuration/package-summary.html
@@ -155,7 +155,7 @@ var pathtoroot = "../../../../../../../../";
 </tr>
 <tbody>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=BatchBarcodeScannerConfigurationParams.html>BatchBarcodeScannerConfigurationParams</a></th><td class="colLast">Class containing all the keys which are used to configure CameraView in Barcode default UI</td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=BatchBarcodeScannerConfigurationParams.html>BatchBarcodeScannerConfigurationParams</a></th><td class="colLast">Class containing all the keys which are used to configure CameraView in Barcode default UI.</td></tr>
 </tbody>
 </table>
 
