--- a/android/api/io/scanbot/sdk/ui/view/barcode/batch/package-summary.html
+++ b/android/api/io/scanbot/sdk/ui/view/barcode/batch/package-summary.html
@@ -179,7 +179,7 @@ var pathtoroot = "../../../../../../../";
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=IBatchBarcodeListView.ViewModel.html>ViewModel</a></th><td class="colLast">Notified about user interactions.</td></tr>
 
-    <tr class="rowColor"><th class="colFirst" scope="row"><a href=IBatchBarcodeListView.html>IBatchBarcodeListView</a></th><td class="colLast">Represents list of scanned barcodes</td></tr>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=IBatchBarcodeListView.html>IBatchBarcodeListView</a></th><td class="colLast">Represents list of scanned barcodes.</td></tr>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=InternalBatchBarcodeScannerActivity.InternalResult.html>InternalResult</a></th><td class="colLast">Wrapper-class for all information, obtained as a result of RTU activity work.</td></tr>
 
