--- a/android/api/io/scanbot/sdk/ui/view/barcode/package-summary.html
+++ b/android/api/io/scanbot/sdk/ui/view/barcode/package-summary.html
@@ -141,7 +141,7 @@ var pathtoroot = "../../../../../../";
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=BarcodeCameraView.html>BarcodeCameraView</a></th><td class="colLast">Represents camera view for barcode scanner.</td></tr>
 
-    <tr class="rowColor"><th class="colFirst" scope="row"><a href=BarcodeCameraViewModel.html>BarcodeCameraViewModel</a></th><td class="colLast">ViewModel for <a href=BarcodeCameraView.html>BarcodeCameraView</a></td></tr>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=BarcodeCameraViewModel.html>BarcodeCameraViewModel</a></th><td class="colLast">ViewModel for <a href=BarcodeCameraView.html>BarcodeCameraView</a>.</td></tr>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=BarcodeScanningSession.html>BarcodeScanningSession</a></th><td class="colLast">Provides a wrapper for observing a barcode scanning result</td></tr>
 
@@ -153,11 +153,15 @@ var pathtoroot = "../../../../../../";
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=BarcodeNavigationEvents.BarcodeScanned.html>BarcodeScanned</a></th><td class="colLast"></td></tr>
 
-    <tr class="rowColor"><th class="colFirst" scope="row"><a href=BarcodeNavigationEvents.html>BarcodeNavigationEvents</a></th><td class="colLast">Class that describe all navigation evens for barcode scanner rtu-ui</td></tr>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=BarcodeNavigationEvents.BarcodeSelected.html>BarcodeSelected</a></th><td class="colLast"></td></tr>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=BatchBarcodeNavEvent.BarcodesScanFinished.html>BarcodesScanFinished</a></th><td class="colLast">Event that user wants to finish the flow of scanning</td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=BarcodeNavigationEvents.html>BarcodeNavigationEvents</a></th><td class="colLast">Class that describe all navigation evens for barcode scanner rtu-ui</td></tr>
 
-    <tr class="rowColor"><th class="colFirst" scope="row"><a href=BatchBarcodeNavEvent.html>BatchBarcodeNavEvent</a></th><td class="colLast">Class that describe additional navigation evens only for batch barcode scanner rtu-ui</td></tr>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=BatchBarcodeNavEvent.BarcodesScanFinished.html>BarcodesScanFinished</a></th><td class="colLast">Event that user wants to finish the flow of scanning</td></tr>
+
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=BatchBarcodeNavEvent.html>BatchBarcodeNavEvent</a></th><td class="colLast">Class that describe additional navigation evens only for batch barcode scanner rtu-ui</td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=SelectionOverlayConfiguration.html>SelectionOverlayConfiguration</a></th><td class="colLast">Barcode Selection Overlay configuration</td></tr>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=BarcodeScannerActivity.Result.html>Result</a></th><td class="colLast">Wrapper-class for all information, obtained as a result of RTU activity work.</td></tr>
 
@@ -191,7 +195,7 @@ var pathtoroot = "../../../../../../";
 
     <tr class="rowColor"><th class="colFirst" scope="row"><a href=IBarcodeCameraView.ViewModel.html>ViewModel</a></th><td class="colLast">Notified about user interactions.</td></tr>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=IBarcodeCameraView.html>IBarcodeCameraView</a></th><td class="colLast">Represents camera screen for barcodes scanning</td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=IBarcodeCameraView.html>IBarcodeCameraView</a></th><td class="colLast">Represents camera screen for barcodes scanning.</td></tr>
 
     <tr class="rowColor"><th class="colFirst" scope="row"><a href=InternalBarcodeScannerActivity.InternalResult.html>InternalResult</a></th><td class="colLast">Wrapper-class for all information, obtained as a result of RTU activity work.</td></tr>
 </tbody>
