--- a/android/api/io/scanbot/sdk/ui/view/edit/configuration/CroppingConfigurationHelper.html
+++ b/android/api/io/scanbot/sdk/ui/view/edit/configuration/CroppingConfigurationHelper.html
@@ -110,7 +110,7 @@ var pathtoroot = "../../../../../../../";
 public final class <span class="typeNameLabel"><a href=CroppingConfigurationHelper.html>CroppingConfigurationHelper</a></span>
 
                     </pre>
-                    <div class="block"><p>Encapsulates the logic of work with configuration for</p></div>
+                    <div class="block"><p>Encapsulates the logic of work with configuration for cropping RTU screen.</p></div>
                 </li>
             </ul>
         </div>
