--- a/android/api/io/scanbot/sdk/ui/view/edit/configuration/package-summary.html
+++ b/android/api/io/scanbot/sdk/ui/view/edit/configuration/package-summary.html
@@ -111,7 +111,31 @@ var pathtoroot = "../../../../../../../";
 
     <tr class="rowColor"><th class="colFirst" scope="row"><a href=CroppingConfiguration.html>CroppingConfiguration</a></th><td class="colLast">Class which is used to configure <a href=../CroppingActivity.html>io.scanbot.sdk.ui.view.edit.CroppingActivity</a> Contains settings indicating views Behaviour, Texts and Appearance</td></tr>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=CroppingConfigurationHelper.html>CroppingConfigurationHelper</a></th><td class="colLast">Encapsulates the logic of work with configuration for</td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=CroppingConfigurationHelper.html>CroppingConfigurationHelper</a></th><td class="colLast">Encapsulates the logic of work with configuration for cropping RTU screen.</td></tr>
+</tbody>
+</table>
+
+    </div>
+
+                </li>
+                
+                <li class="blockList">
+                    
+                    
+                    
+                    
+                    
+    <div class="typeSummary">
+
+<table>
+<caption><span>Object Summary</span><span class="tabEnd">&nbsp;</span></caption>
+<tr>
+<th class="colFirst" scope="col">Object</th>
+<th class="colLast" scope="col">Description</th>
+</tr>
+<tbody>
+
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=CroppingConfiguration.Companion.html>Companion</a></th><td class="colLast"></td></tr>
 </tbody>
 </table>
 
