--- a/android/api/io/scanbot/sdk/ui/view/multiple_objects/BusinessCardsScannerViewModel.html
+++ b/android/api/io/scanbot/sdk/ui/view/multiple_objects/BusinessCardsScannerViewModel.html
@@ -118,7 +118,7 @@ var pathtoroot = "../../../../../../";
 public final class <span class="typeNameLabel"><a href=BusinessCardsScannerViewModel.html>BusinessCardsScannerViewModel</a></span>
  implements <a href=IMultipleObjectsCameraView.ViewModel.html>IMultipleObjectsCameraView.ViewModel</a>, <a href=../../utils/Router.html>Router</a>
                     </pre>
-                    <div class="block"></div>
+                    <div class="block"><p>Camera view model of multiple objects scanner.</p></div>
                 </li>
             </ul>
         </div>
