--- a/android/api/io/scanbot/sdk/ui/view/multiple_objects/package-summary.html
+++ b/android/api/io/scanbot/sdk/ui/view/multiple_objects/package-summary.html
@@ -123,7 +123,7 @@ var pathtoroot = "../../../../../../";
 
     <tr class="rowColor"><th class="colFirst" scope="row"><a href=BusinessCardsScannerNavigationEvent.html>BusinessCardsScannerNavigationEvent</a></th><td class="colLast">This class describes all events inside Business Cards scanner.</td></tr>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=BusinessCardsScannerViewModel.html>BusinessCardsScannerViewModel</a></th><td class="colLast"></td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=BusinessCardsScannerViewModel.html>BusinessCardsScannerViewModel</a></th><td class="colLast">Camera view model of multiple objects scanner.</td></tr>
 
     <tr class="rowColor"><th class="colFirst" scope="row"><a href=MultipleObjectsCameraView.html>MultipleObjectsCameraView</a></th><td class="colLast"><a href=https://developer.android.com/reference/kotlin/android/view/View.html>View</a>-based implementation of <a href=IMultipleObjectsCameraView.html>IMultipleObjectsCameraView</a></td></tr>
 </tbody>
