--- a/android/api/io/scanbot/sdk/util/view/PolygonViewHelper.Edge.html
+++ b/android/api/io/scanbot/sdk/util/view/PolygonViewHelper.Edge.html
@@ -82,7 +82,7 @@ var pathtoroot = "../../../../../";
 <main role="main">
     <div class="header">
         <div class="subTitle"><span class="packageLabelInType">Package</span>&nbsp;<a href="package-summary.html"></a></div>
-        <h2 title="Class PolygonHelper.Edge" class="title">Class PolygonHelper.Edge</h2>
+        <h2 title="Class PolygonViewHelper.Edge" class="title">Class PolygonViewHelper.Edge</h2>
     </div>
     <div class="contentContainer">
         <!-- <ul class="inheritance">
@@ -107,7 +107,7 @@ var pathtoroot = "../../../../../";
                     <hr>
                     <pre class="wrap-overflow">
 
-public class <span class="typeNameLabel"><a href=PolygonHelper.Edge.html>PolygonHelper.Edge</a></span>
+public class <span class="typeNameLabel"><a href=PolygonViewHelper.Edge.html>PolygonViewHelper.Edge</a></span>
 
                     </pre>
                     <div class="block"><p>Represents edge of polygon with near and far points as well as intersecting lines from other edges </p><p> pointA handle pointB O========[0]=========O | ^ edgeLine ^ | | | |lineA | lineB | | | | O====================O pointFarA pointFarB</p></div>
@@ -159,67 +159,67 @@ public class <span class="typeNameLabel"><a href=PolygonHelper.Edge.html>Polygon
                                         
                                         <tr class="altColor">
                                             <td class="colFirst"><code>public  <a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a></code></td>
-                                            <th class="colSecond" scope="row"><code><a href=PolygonHelper.Edge.html#pointA>pointA</a></code></th>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Edge.html#pointA>pointA</a></code></th>
                                             <td class="colLast"></td>
                                         </tr>
                                         
                                         <tr class="rowColor">
                                             <td class="colFirst"><code>public  <a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a></code></td>
-                                            <th class="colSecond" scope="row"><code><a href=PolygonHelper.Edge.html#pointB>pointB</a></code></th>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Edge.html#pointB>pointB</a></code></th>
                                             <td class="colLast"></td>
                                         </tr>
                                         
                                         <tr class="altColor">
                                             <td class="colFirst"><code>public  <a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a></code></td>
-                                            <th class="colSecond" scope="row"><code><a href=PolygonHelper.Edge.html#pointFarA>pointFarA</a></code></th>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Edge.html#pointFarA>pointFarA</a></code></th>
                                             <td class="colLast"></td>
                                         </tr>
                                         
                                         <tr class="rowColor">
                                             <td class="colFirst"><code>public  <a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a></code></td>
-                                            <th class="colSecond" scope="row"><code><a href=PolygonHelper.Edge.html#pointFarB>pointFarB</a></code></th>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Edge.html#pointFarB>pointFarB</a></code></th>
                                             <td class="colLast"></td>
                                         </tr>
                                         
                                         <tr class="altColor">
-                                            <td class="colFirst"><code>public  <a href=PolygonHelper.Line.html>PolygonHelper.Line</a></code></td>
-                                            <th class="colSecond" scope="row"><code><a href=PolygonHelper.Edge.html#edgeLine>edgeLine</a></code></th>
+                                            <td class="colFirst"><code>public  <a href=PolygonViewHelper.Line.html>PolygonViewHelper.Line</a></code></td>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Edge.html#edgeLine>edgeLine</a></code></th>
                                             <td class="colLast"></td>
                                         </tr>
                                         
                                         <tr class="rowColor">
-                                            <td class="colFirst"><code>public  <a href=PolygonHelper.Line.html>PolygonHelper.Line</a></code></td>
-                                            <th class="colSecond" scope="row"><code><a href=PolygonHelper.Edge.html#lineA>lineA</a></code></th>
+                                            <td class="colFirst"><code>public  <a href=PolygonViewHelper.Line.html>PolygonViewHelper.Line</a></code></td>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Edge.html#lineA>lineA</a></code></th>
                                             <td class="colLast"></td>
                                         </tr>
                                         
                                         <tr class="altColor">
-                                            <td class="colFirst"><code>public  <a href=PolygonHelper.Line.html>PolygonHelper.Line</a></code></td>
-                                            <th class="colSecond" scope="row"><code><a href=PolygonHelper.Edge.html#lineB>lineB</a></code></th>
+                                            <td class="colFirst"><code>public  <a href=PolygonViewHelper.Line.html>PolygonViewHelper.Line</a></code></td>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Edge.html#lineB>lineB</a></code></th>
                                             <td class="colLast"></td>
                                         </tr>
                                         
                                         <tr class="rowColor">
                                             <td class="colFirst"><code>public  <a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a></code></td>
-                                            <th class="colSecond" scope="row"><code><a href=PolygonHelper.Edge.html#handle>handle</a></code></th>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Edge.html#handle>handle</a></code></th>
                                             <td class="colLast"></td>
                                         </tr>
                                         
                                         <tr class="altColor">
                                             <td class="colFirst"><code>public  float</code></td>
-                                            <th class="colSecond" scope="row"><code><a href=PolygonHelper.Edge.html#prevX>prevX</a></code></th>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Edge.html#prevX>prevX</a></code></th>
                                             <td class="colLast"></td>
                                         </tr>
                                         
                                         <tr class="rowColor">
                                             <td class="colFirst"><code>public  float</code></td>
-                                            <th class="colSecond" scope="row"><code><a href=PolygonHelper.Edge.html#prevY>prevY</a></code></th>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Edge.html#prevY>prevY</a></code></th>
                                             <td class="colLast"></td>
                                         </tr>
                                         
                                         <tr class="altColor">
                                             <td class="colFirst"><code>public  boolean</code></td>
-                                            <th class="colSecond" scope="row"><code><a href=PolygonHelper.Edge.html#isDetectedLine>isDetectedLine</a></code></th>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Edge.html#isDetectedLine>isDetectedLine</a></code></th>
                                             <td class="colLast"></td>
                                         </tr>
                                         
@@ -299,7 +299,7 @@ public class <span class="typeNameLabel"><a href=PolygonHelper.Edge.html>Polygon
                                         <tr id="i0" class="altColor">
                                             <td class="colFirst"><code><a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a></code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=PolygonHelper.Edge.html#getHandle()>getHandle</a>() </code>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Edge.html#getHandle()>getHandle</a>() </code>
                                             </th>
                                             <td class="colLast"></td>
                                         </tr>
@@ -307,7 +307,7 @@ public class <span class="typeNameLabel"><a href=PolygonHelper.Edge.html>Polygon
                                         <tr id="i1" class="rowColor">
                                             <td class="colFirst"><code>float</code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=PolygonHelper.Edge.html#getAngleInDegrees()>getAngleInDegrees</a>() </code>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Edge.html#getAngleInDegrees()>getAngleInDegrees</a>() </code>
                                             </th>
                                             <td class="colLast"></td>
                                         </tr>
@@ -315,7 +315,7 @@ public class <span class="typeNameLabel"><a href=PolygonHelper.Edge.html>Polygon
                                         <tr id="i2" class="altColor">
                                             <td class="colFirst"><code>boolean</code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=PolygonHelper.Edge.html#isHorizontal()>isHorizontal</a>() </code>
+                                            <th class="colSecond" scope="row"><code><a href=PolygonViewHelper.Edge.html#isHorizontal()>isHorizontal</a>() </code>
                                             </th>
                                             <td class="colLast"></td>
                                         </tr>
@@ -372,7 +372,7 @@ public class <span class="typeNameLabel"><a href=PolygonHelper.Edge.html>Polygon
                                           >
                                     <li class="blockList">
                                         <h4>getHandle</h4>
-                                        <pre class="methodSignature"> <a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a> <a href=PolygonHelper.Edge.html#getHandle()>getHandle</a>()</pre>
+                                        <pre class="methodSignature"> <a href=https://developer.android.com/reference/kotlin/android/graphics/PointF.html>PointF</a> <a href=PolygonViewHelper.Edge.html#getHandle()>getHandle</a>()</pre>
                                         <div class="block"></div>
                                         
                                         <!-- TODO missing return annotation -->
@@ -387,7 +387,7 @@ public class <span class="typeNameLabel"><a href=PolygonHelper.Edge.html>Polygon
                                           >
                                     <li class="blockList">
                                         <h4>getAngleInDegrees</h4>
-                                        <pre class="methodSignature"> float <a href=PolygonHelper.Edge.html#getAngleInDegrees()>getAngleInDegrees</a>()</pre>
+                                        <pre class="methodSignature"> float <a href=PolygonViewHelper.Edge.html#getAngleInDegrees()>getAngleInDegrees</a>()</pre>
                                         <div class="block"></div>
                                         
                                         <!-- TODO missing return annotation -->
@@ -402,7 +402,7 @@ public class <span class="typeNameLabel"><a href=PolygonHelper.Edge.html>Polygon
                                           >
                                     <li class="blockList">
                                         <h4>isHorizontal</h4>
-                                        <pre class="methodSignature"> boolean <a href=PolygonHelper.Edge.html#isHorizontal()>isHorizontal</a>()</pre>
+                                        <pre class="methodSignature"> boolean <a href=PolygonViewHelper.Edge.html#isHorizontal()>isHorizontal</a>()</pre>
                                         <div class="block"></div>
                                         
                                         <!-- TODO missing return annotation -->
