--- a/android/api/io/scanbot/sdk/util/view/package-summary.html
+++ b/android/api/io/scanbot/sdk/util/view/package-summary.html
@@ -107,11 +107,11 @@ var pathtoroot = "../../../../../";
 </tr>
 <tbody>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=PolygonHelper.Edge.html>Edge</a></th><td class="colLast">Represents edge of polygon with near and far points as well as intersecting lines from other edges  pointA handle pointB O========[0]=========O | ^ edgeLine ^ | | | |lineA | lineB | | | | O====================O pointFarA pointFarB</td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=PolygonViewHelper.Edge.html>Edge</a></th><td class="colLast">Represents edge of polygon with near and far points as well as intersecting lines from other edges  pointA handle pointB O========[0]=========O | ^ edgeLine ^ | | | |lineA | lineB | | | | O====================O pointFarA pointFarB</td></tr>
 
-    <tr class="rowColor"><th class="colFirst" scope="row"><a href=PolygonHelper.Line.html>Line</a></th><td class="colLast">Representation of line  Calculates line by two points and finds intersection points with other lines  General line formula is a * x + b * y + c = 0</td></tr>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=PolygonViewHelper.Line.html>Line</a></th><td class="colLast">Representation of line  Calculates line by two points and finds intersection points with other lines  General line formula is a * x + b * y + c = 0</td></tr>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=PolygonHelper.html>PolygonHelper</a></th><td class="colLast">Helper to make it easier to draw polygon on view</td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=PolygonViewHelper.html>PolygonViewHelper</a></th><td class="colLast">Helper to make it easier to draw polygon on view</td></tr>
 </tbody>
 </table>
 
