--- a/android/api/io/scanbot/sdk/ui/view/barcode/BarcodeNavigationEvents.html
+++ b/android/api/io/scanbot/sdk/ui/view/barcode/BarcodeNavigationEvents.html
@@ -151,6 +151,13 @@ public class <span class="typeNameLabel"><a href=BarcodeNavigationEvents.html>Ba
                                             <td class="colLast"></td>
                                         </tr>
                                         
+                                        <tr class="altColor">
+                                            <td class="colFirst"><code>public final class</code></td>
+                                            <th class="colSecond" scope="row"><code><a href="BarcodeNavigationEvents.BarcodeSelected.html">BarcodeNavigationEvents.BarcodeSelected</a></span></code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
                                     </table>
                                 </div>
                             </li>
