--- a/android/api/io/scanbot/sdk/ui/view/barcode/configuration/BarcodeCameraConfigurationHelper.html
+++ b/android/api/io/scanbot/sdk/ui/view/barcode/configuration/BarcodeCameraConfigurationHelper.html
@@ -110,7 +110,7 @@ var pathtoroot = "../../../../../../../";
 public final class <span class="typeNameLabel"><a href=BarcodeCameraConfigurationHelper.html>BarcodeCameraConfigurationHelper</a></span>
 
                     </pre>
-                    <div class="block"><p>Incapsulates the logic of work with configuration for barcode camera view</p></div>
+                    <div class="block"><p>Encapsulates the logic of work with configuration for barcode camera view.</p></div>
                 </li>
             </ul>
         </div>
