--- a/android/api/io/scanbot/sdk/ui/view/barcode/configuration/BarcodeScannerConfiguration.Companion.html
+++ b/android/api/io/scanbot/sdk/ui/view/barcode/configuration/BarcodeScannerConfiguration.Companion.html
@@ -240,7 +240,7 @@ public class <span class="typeNameLabel"><a href=BarcodeScannerConfiguration.Com
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=BarcodeScannerConfiguration.Companion.html#fromJson(String)>fromJson</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> input) </code>
                                             </th>
-                                            <td class="colLast">Creates a screen configuration object from a JSON string</td>
+                                            <td class="colLast">Creates a screen configuration object from a JSON string.</td>
                                         </tr>
                                         
                                         </tbody>
@@ -296,7 +296,7 @@ public class <span class="typeNameLabel"><a href=BarcodeScannerConfiguration.Com
                                     <li class="blockList">
                                         <h4>fromJson</h4>
                                         <pre class="methodSignature"> final <a href=BarcodeScannerConfiguration.html>BarcodeScannerConfiguration</a> <a href=BarcodeScannerConfiguration.Companion.html#fromJson(String)>fromJson</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> input)</pre>
-                                        <div class="block"><p>Creates a screen configuration object from a JSON string</p></div>
+                                        <div class="block"><p>Creates a screen configuration object from a JSON string.</p></div>
                                         
                                         <dl>
                                             <dt><span class="paramLabel">Parameters:</span></dt>
