--- a/android/api/io/scanbot/sdk/ui/view/barcode/configuration/json/BarcodeJsonExtensionsKt.html
+++ b/android/api/io/scanbot/sdk/ui/view/barcode/configuration/json/BarcodeJsonExtensionsKt.html
@@ -235,7 +235,7 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self) </code>
                                             </th>
-                                            <td class="colLast">Converts JSON-compatible object to SDK object</td>
+                                            <td class="colLast">Converts JSON-compatible object to SDK object.</td>
                                         </tr>
                                         
                                         <tr id="i1" class="rowColor">
@@ -243,7 +243,7 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self) </code>
                                             </th>
-                                            <td class="colLast">Converts JSON-compatible object to SDK object</td>
+                                            <td class="colLast">Converts JSON-compatible object to SDK object.</td>
                                         </tr>
                                         
                                         <tr id="i2" class="altColor">
@@ -251,11 +251,27 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self) </code>
                                             </th>
-                                            <td class="colLast">Converts JSON-compatible object to SDK object</td>
+                                            <td class="colLast">Converts JSON-compatible object to SDK object.</td>
                                         </tr>
                                         
                                         <tr id="i3" class="rowColor">
                                             <td class="colFirst"><code>final static <a href=../../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a></code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self) </code>
+                                            </th>
+                                            <td class="colLast">Converts JSON-compatible object to SDK object.</td>
+                                        </tr>
+                                        
+                                        <tr id="i4" class="altColor">
+                                            <td class="colFirst"><code>final static <a href=../BarcodeImageGenerationType.html>BarcodeImageGenerationType</a></code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self) </code>
+                                            </th>
+                                            <td class="colLast">Converts JSON-compatible object to SDK object.</td>
+                                        </tr>
+                                        
+                                        <tr id="i5" class="rowColor">
+                                            <td class="colFirst"><code>final static &lt;Error class: unknown class&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self) </code>
                                             </th>
@@ -315,7 +331,7 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                     <li class="blockList">
                                         <h4>toSdk</h4>
                                         <pre class="methodSignature"> final static <a href=../../../../../barcode/entity/BarcodeFormat.html>BarcodeFormat</a> <a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self)</pre>
-                                        <div class="block"><p>Converts JSON-compatible object to SDK object</p></div>
+                                        <div class="block"><p>Converts JSON-compatible object to SDK object.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
@@ -330,7 +346,7 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                     <li class="blockList">
                                         <h4>toSdk</h4>
                                         <pre class="methodSignature"> final static <a href=../../../../../barcode/entity/EngineMode.html>EngineMode</a> <a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self)</pre>
-                                        <div class="block"><p>Converts JSON-compatible object to SDK object</p></div>
+                                        <div class="block"><p>Converts JSON-compatible object to SDK object.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
@@ -345,7 +361,37 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                     <li class="blockList">
                                         <h4>toSdk</h4>
                                         <pre class="methodSignature"> final static <a href=../../../../../barcode/entity/BarcodeDocumentFormat.html>BarcodeDocumentFormat</a> <a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self)</pre>
-                                        <div class="block"><p>Converts JSON-compatible object to SDK object</p></div>
+                                        <div class="block"><p>Converts JSON-compatible object to SDK object.</p></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="toSdk(&lt;Error class: unknown class&gt;)">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>toSdk</h4>
+                                        <pre class="methodSignature"> final static <a href=../../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a> <a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self)</pre>
+                                        <div class="block"><p>Converts JSON-compatible object to SDK object.</p></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="toSdk(&lt;Error class: unknown class&gt;)">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>toSdk</h4>
+                                        <pre class="methodSignature"> final static <a href=../BarcodeImageGenerationType.html>BarcodeImageGenerationType</a> <a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self)</pre>
+                                        <div class="block"><p>Converts JSON-compatible object to SDK object.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
@@ -359,7 +405,7 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                           >
                                     <li class="blockList">
                                         <h4>toSdk</h4>
-                                        <pre class="methodSignature"> final static <a href=../../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a> <a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self)</pre>
+                                        <pre class="methodSignature"> final static &lt;Error class: unknown class&gt; <a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self)</pre>
                                         <div class="block"><p>Converts JSON-compatible object to SDK object</p></div>
                                         
                                         <!-- TODO missing return annotation -->
