--- a/android/api/io/scanbot/sdk/ui/view/edit/configuration/CroppingConfiguration.html
+++ b/android/api/io/scanbot/sdk/ui/view/edit/configuration/CroppingConfiguration.html
@@ -134,6 +134,13 @@ public final class <span class="typeNameLabel"><a href=CroppingConfiguration.htm
                                             <th class="colLast" scope="col">Description</th>
                                         </tr>
                                         
+                                        <tr class="altColor">
+                                            <td class="colFirst"><code>public class</code></td>
+                                            <th class="colSecond" scope="row"><code><a href="CroppingConfiguration.Companion.html">CroppingConfiguration.Companion</a></span></code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
                                     </table>
                                 </div>
                             </li>
@@ -285,7 +292,7 @@ public final class <span class="typeNameLabel"><a href=CroppingConfiguration.htm
                                         <tr id="i5" class="rowColor">
                                             <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=CroppingConfiguration.html#setPolygonLineWidth(Integer)>setPolygonLineWidth</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> color) </code>
+                                            <th class="colSecond" scope="row"><code><a href=CroppingConfiguration.html#setPolygonLineWidth(Integer)>setPolygonLineWidth</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> width) </code>
                                             </th>
                                             <td class="colLast">Width of the cropping outline.</td>
                                         </tr>
@@ -407,7 +414,7 @@ public final class <span class="typeNameLabel"><a href=CroppingConfiguration.htm
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=CroppingConfiguration.html#setUseButtonsAllCaps(Boolean)>setUseButtonsAllCaps</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> allCaps) </code>
                                             </th>
-                                            <td class="colLast">Controls whether buttons should use all capitals style</td>
+                                            <td class="colLast">Controls whether buttons should use all capitals style.</td>
                                         </tr>
                                         
                                         <tr id="i21" class="rowColor">
@@ -423,7 +430,15 @@ public final class <span class="typeNameLabel"><a href=CroppingConfiguration.htm
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=CroppingConfiguration.html#setSwapTopBottomButtons(Boolean)>setSwapTopBottomButtons</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> swap) </code>
                                             </th>
-                                            <td class="colLast">Swap top and bottom buttons on the screen</td>
+                                            <td class="colLast">Swap top and bottom buttons on the screen.</td>
+                                        </tr>
+                                        
+                                        <tr id="i23" class="rowColor">
+                                            <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=CroppingConfiguration.html#modifyFromJsonConfiguration(<Error class: unknown class>)>modifyFromJsonConfiguration</a>(&lt;Error class: unknown class&gt; jsonConfig) </code>
+                                            </th>
+                                            <td class="colLast">Modifies a screen configuration object with settings from a JSON configuration object</td>
                                         </tr>
                                         
                                         </tbody>
@@ -563,7 +578,7 @@ public final class <span class="typeNameLabel"><a href=CroppingConfiguration.htm
                                           >
                                     <li class="blockList">
                                         <h4>setPolygonLineWidth</h4>
-                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=CroppingConfiguration.html#setPolygonLineWidth(Integer)>setPolygonLineWidth</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> color)</pre>
+                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=CroppingConfiguration.html#setPolygonLineWidth(Integer)>setPolygonLineWidth</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> width)</pre>
                                         <div class="block"><p>Width of the cropping outline.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
@@ -789,7 +804,7 @@ public final class <span class="typeNameLabel"><a href=CroppingConfiguration.htm
                                     <li class="blockList">
                                         <h4>setUseButtonsAllCaps</h4>
                                         <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=CroppingConfiguration.html#setUseButtonsAllCaps(Boolean)>setUseButtonsAllCaps</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> allCaps)</pre>
-                                        <div class="block"><p>Controls whether buttons should use all capitals style</p></div>
+                                        <div class="block"><p>Controls whether buttons should use all capitals style.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
@@ -814,12 +829,36 @@ public final class <span class="typeNameLabel"><a href=CroppingConfiguration.htm
                                     <!--   -->
                                 </a>
                                 <ul class=
-                                              "blockListLast"
+                                              "blockList"
                                           >
                                     <li class="blockList">
                                         <h4>setSwapTopBottomButtons</h4>
                                         <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=CroppingConfiguration.html#setSwapTopBottomButtons(Boolean)>setSwapTopBottomButtons</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> swap)</pre>
-                                        <div class="block"><p>Swap top and bottom buttons on the screen</p></div>
+                                        <div class="block"><p>Swap top and bottom buttons on the screen.</p></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="modifyFromJsonConfiguration(&lt;Error class: unknown class&gt;)">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockListLast"
+                                          >
+                                    <li class="blockList">
+                                        <h4>modifyFromJsonConfiguration</h4>
+                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=CroppingConfiguration.html#modifyFromJsonConfiguration(<Error class: unknown class>)>modifyFromJsonConfiguration</a>(&lt;Error class: unknown class&gt; jsonConfig)</pre>
+                                        <div class="block"><p>Modifies a screen configuration object with settings from a JSON configuration object</p></div>
+                                        
+                                        <dl>
+                                            <dt><span class="paramLabel">Parameters:</span></dt>
+                                            
+                                            
+                                            <dd><code>jsonConfig</code> - json configuration object</dd>
+                                            
+                                            
+                                        </dl>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
