--- a/android/api/io/scanbot/sdk/ui/view/edit/configuration/json/CroppingJsonExtensionsKt.html
+++ b/android/api/io/scanbot/sdk/ui/view/edit/configuration/json/CroppingJsonExtensionsKt.html
@@ -1,25 +1,25 @@
 <!DOCTYPE HTML>
 <!-- NewPage -->
 <html lang="en"><head>
-    <title>ScanBeeper </title>
+    <title>CroppingJsonExtensionsKt </title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="dc.created" content="2020-03-25">
-    <link rel="stylesheet" type="text/css" href="../../../../../stylesheet.css" title="Style">
-    <link rel="stylesheet" type="text/css" href="../../../../../dokka-javadoc-stylesheet.css" title="Style">
-    <link rel="stylesheet" type="text/css" href="../../../../../jquery/jquery-ui.css" title="Style">
-    <script type="text/javascript" src="../../../../../jquery/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="../../../../../jquery/jquery-migrate-3.4.0.min.js"></script>
-    <script type="text/javascript" src="../../../../../jquery/jquery-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../../../../../../../stylesheet.css" title="Style">
+    <link rel="stylesheet" type="text/css" href="../../../../../../../../dokka-javadoc-stylesheet.css" title="Style">
+    <link rel="stylesheet" type="text/css" href="../../../../../../../../jquery/jquery-ui.css" title="Style">
+    <script type="text/javascript" src="../../../../../../../../jquery/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="../../../../../../../../jquery/jquery-migrate-3.4.0.min.js"></script>
+    <script type="text/javascript" src="../../../../../../../../jquery/jquery-ui.js"></script>
 
-    <script type="text/javascript" src="../../../../../search.js"></script>
-    <script async type="text/javascript" src="../../../../../module-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../package-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../type-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../member-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../tag-search-index.js"></script>
+    <script type="text/javascript" src="../../../../../../../../search.js"></script>
+    <script async type="text/javascript" src="../../../../../../../../module-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../../../package-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../../../type-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../../../member-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../../../tag-search-index.js"></script>
 </head><body>
 <script type="text/javascript">
-var pathtoroot = "../../../../../";
+var pathtoroot = "../../../../../../../../";
 </script>
 <noscript>
     <div>JavaScript is disabled on your browser.</div>
@@ -36,19 +36,19 @@ var pathtoroot = "../../../../../";
                     <!--   -->
                 </a>
                 <ul class="navList" title="Navigation">
-    <li><a href="../../../../../index.html">Overview</a></li>
+    <li><a href="../../../../../../../../index.html">Overview</a></li>
     
     <li><a href="package-summary.html">Package</a></li>
     
     <li class="navBarCell1Rev">Class</li>
     
     
-    <li><a href="../../../../../deprecated.html">Deprecated</a></li>
-    <li><a href="../../../../../index-files/index-1.html">Index</a></li>
+    <li><a href="../../../../../../../../deprecated.html">Deprecated</a></li>
+    <li><a href="../../../../../../../../index-files/index-1.html">Index</a></li>
 </ul></div>
             <div class="subNav">
 <ul class="navList" id="allclasses_navbar_top" style="display: block;">
-    <li><a href="../../../../../allclasses.html">All&nbsp;Classes</a></li>
+    <li><a href="../../../../../../../../allclasses.html">All&nbsp;Classes</a></li>
 </ul>
 
 
@@ -82,7 +82,7 @@ var pathtoroot = "../../../../../";
 <main role="main">
     <div class="header">
         <div class="subTitle"><span class="packageLabelInType">Package</span>&nbsp;<a href="package-summary.html"></a></div>
-        <h2 title="Class ScanBeeper" class="title">Class ScanBeeper</h2>
+        <h2 title="Class CroppingJsonExtensionsKt" class="title">Class CroppingJsonExtensionsKt</h2>
     </div>
     <div class="contentContainer">
         <!-- <ul class="inheritance">
@@ -107,10 +107,10 @@ var pathtoroot = "../../../../../";
                     <hr>
                     <pre class="wrap-overflow">
 
-public final class <span class="typeNameLabel"><a href=ScanBeeper.html>ScanBeeper</a></span>
+public final class <span class="typeNameLabel"><a href=CroppingJsonExtensionsKt.html>CroppingJsonExtensionsKt</a></span>
 
                     </pre>
-                    <div class="block"><p>Encapsulates playing 'beep' sound and setting up/releasing corresponding resources.</p></div>
+                    <div class="block"></div>
                 </li>
             </ul>
         </div>
@@ -181,12 +181,6 @@ public final class <span class="typeNameLabel"><a href=ScanBeeper.html>ScanBeepe
                                         </tr>
 
                                         
-                                            <tr class="altColor">
-                                                <th class="colConstructorName" scope="row"><code><span class="memberNameLink"><a
-                                                        href="#ScanBeeper(Context)">ScanBeeper</a></span>(<a href=https://developer.android.com/reference/kotlin/android/content/Context.html>Context</a> context)</code></th>
-                                                <td class="colLast"></td>
-                                            </tr>
-                                        
 
                                         </tbody>
                                     </table>
@@ -237,43 +231,11 @@ public final class <span class="typeNameLabel"><a href=ScanBeeper.html>ScanBeepe
                                         </tr>
                                         
                                         <tr id="i0" class="altColor">
-                                            <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
+                                            <td class="colFirst"><code>final static <a href=../CroppingAccessibilityConfiguration.html>CroppingAccessibilityConfiguration</a></code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=ScanBeeper.html#setUp()>setUp</a>() </code>
+                                            <th class="colSecond" scope="row"><code><a href=CroppingJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self) </code>
                                             </th>
-                                            <td class="colLast">Prepare mediaPlayer for future 'beep' playing.</td>
-                                        </tr>
-                                        
-                                        <tr id="i1" class="rowColor">
-                                            <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
-                                            </td>
-                                            <th class="colSecond" scope="row"><code><a href=ScanBeeper.html#release()>release</a>() </code>
-                                            </th>
-                                            <td class="colLast">Release mediaPlayer.</td>
-                                        </tr>
-                                        
-                                        <tr id="i2" class="altColor">
-                                            <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
-                                            </td>
-                                            <th class="colSecond" scope="row"><code><a href=ScanBeeper.html#setOnBeepCompleteAction(Function0)>setOnBeepCompleteAction</a>(Function0&lt;<a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a>&gt; onBeepCompleteAction) </code>
-                                            </th>
-                                            <td class="colLast">Sets the action to be invoked after <a href=ScanBeeper.html#beep()>beep</a> method executed.</td>
-                                        </tr>
-                                        
-                                        <tr id="i3" class="rowColor">
-                                            <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
-                                            </td>
-                                            <th class="colSecond" scope="row"><code><a href=ScanBeeper.html#setEnabled(Boolean)>setEnabled</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> enable) </code>
-                                            </th>
-                                            <td class="colLast">Whether actual sound playing is enabled.</td>
-                                        </tr>
-                                        
-                                        <tr id="i4" class="altColor">
-                                            <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
-                                            </td>
-                                            <th class="colSecond" scope="row"><code><a href=ScanBeeper.html#beep()>beep</a>() </code>
-                                            </th>
-                                            <td class="colLast">Attempt to play sound, if enabled.</td>
+                                            <td class="colLast">Converts JSON-compatible object to SDK object</td>
                                         </tr>
                                         
                                         </tbody>
@@ -307,16 +269,6 @@ public final class <span class="typeNameLabel"><a href=ScanBeeper.html>ScanBeepe
                             </a>
                                 <h3>Constructor Detail</h3>
                                 
-                                <a name="ScanBeeper(Context)"></a>
-                                <ul class="blockList">
-                                    <li class="blockList">
-                                        <h4>ScanBeeper</h4>
-                                        <pre>ScanBeeper(<a href=https://developer.android.com/reference/kotlin/android/content/Context.html>Context</a> context)</pre>
-                                        <div class="block"></div>
-                                        
-                                    </li>
-                                </ul>
-                                
                             </li>
                         </ul>
                     </section>
@@ -330,76 +282,16 @@ public final class <span class="typeNameLabel"><a href=ScanBeeper.html>ScanBeepe
                             </a>
                                 <h3>Method Detail</h3>
                                 
-                                <a id="setUp()">
-                                    <!--   -->
-                                </a>
-                                <ul class=
-                                              "blockList"
-                                          >
-                                    <li class="blockList">
-                                        <h4>setUp</h4>
-                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=ScanBeeper.html#setUp()>setUp</a>()</pre>
-                                        <div class="block"><p>Prepare mediaPlayer for future 'beep' playing.</p></div>
-                                        
-                                        <!-- TODO missing return annotation -->
-                                    </li>
-                                </ul>
-                                
-                                <a id="release()">
-                                    <!--   -->
-                                </a>
-                                <ul class=
-                                              "blockList"
-                                          >
-                                    <li class="blockList">
-                                        <h4>release</h4>
-                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=ScanBeeper.html#release()>release</a>()</pre>
-                                        <div class="block"><p>Release mediaPlayer.</p></div>
-                                        
-                                        <!-- TODO missing return annotation -->
-                                    </li>
-                                </ul>
-                                
-                                <a id="setOnBeepCompleteAction(Function0)">
-                                    <!--   -->
-                                </a>
-                                <ul class=
-                                              "blockList"
-                                          >
-                                    <li class="blockList">
-                                        <h4>setOnBeepCompleteAction</h4>
-                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=ScanBeeper.html#setOnBeepCompleteAction(Function0)>setOnBeepCompleteAction</a>(Function0&lt;<a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a>&gt; onBeepCompleteAction)</pre>
-                                        <div class="block"><p>Sets the action to be invoked after <a href=ScanBeeper.html#beep()>beep</a> method executed.</p><p>NOTE: will be executed if set, even if no beep set to play enabled is <code>false</code>.</p></div>
-                                        
-                                        <!-- TODO missing return annotation -->
-                                    </li>
-                                </ul>
-                                
-                                <a id="setEnabled(Boolean)">
-                                    <!--   -->
-                                </a>
-                                <ul class=
-                                              "blockList"
-                                          >
-                                    <li class="blockList">
-                                        <h4>setEnabled</h4>
-                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=ScanBeeper.html#setEnabled(Boolean)>setEnabled</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> enable)</pre>
-                                        <div class="block"><p>Whether actual sound playing is enabled.</p></div>
-                                        
-                                        <!-- TODO missing return annotation -->
-                                    </li>
-                                </ul>
-                                
-                                <a id="beep()">
+                                <a id="toSdk(&lt;Error class: unknown class&gt;)">
                                     <!--   -->
                                 </a>
                                 <ul class=
                                               "blockListLast"
                                           >
                                     <li class="blockList">
-                                        <h4>beep</h4>
-                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=ScanBeeper.html#beep()>beep</a>()</pre>
-                                        <div class="block"><p>Attempt to play sound, if enabled. Also see <a href=ScanBeeper.html#setOnBeepCompleteAction(Function0)>setOnBeepCompleteAction</a>.</p></div>
+                                        <h4>toSdk</h4>
+                                        <pre class="methodSignature"> final static <a href=../CroppingAccessibilityConfiguration.html>CroppingAccessibilityConfiguration</a> <a href=CroppingJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self)</pre>
+                                        <div class="block"><p>Converts JSON-compatible object to SDK object</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
@@ -426,22 +318,22 @@ public final class <span class="typeNameLabel"><a href=ScanBeeper.html>ScanBeepe
                 <!--   -->
             </a>
             <ul class="navList" title="Navigation">
-    <li><a href="../../../../../index.html">Overview</a></li>
+    <li><a href="../../../../../../../../index.html">Overview</a></li>
     
     <li><a href="package-summary.html">Package</a></li>
     
     <li class="navBarCell1Rev">Class</li>
     
     
-    <li><a href="../../../../../deprecated.html">Deprecated</a></li>
-    <li><a href="../../../../../index-files/index-1.html">Index</a></li>
+    <li><a href="../../../../../../../../deprecated.html">Deprecated</a></li>
+    <li><a href="../../../../../../../../index-files/index-1.html">Index</a></li>
 </ul></div>
         <a id="skip.navbar.bottom">
             <!--   -->
         </a>
         <div class="subNav">
 <ul class="navList" id="allclasses_navbar_top" style="display: block;">
-    <li><a href="../../../../../allclasses.html">All&nbsp;Classes</a></li>
+    <li><a href="../../../../../../../../allclasses.html">All&nbsp;Classes</a></li>
 </ul>
 <div>
 <script type="text/javascript"><!--
